Trying to fix the scrollbar to not appear on mobile devices

--- a/style.css
+++ b/style.css
@@ -381,7 +381,9 @@ h2 {
         display: none; 
     }
     body {
-        -ms-overflow-style: none;
         scrollbar-width: none;
+        -ms-overflow-style: none; 
+        overflow: -moz-scrollbars-none;
+        -webkit-overflow-scrolling: touch;
     }
 }
